<?xml version="1.0"?>                                                           
<package>                                                                       
  <name>fftw3_catkin</name>                                                   
  <version>3.3.8</version>                                                      
  <description>fftw3_catkin</description>                                     
  <maintainer email="lukas.bernreiter@mavt.ethz.ch">Lukas Bernreiter</maintainer>       
  <author>Lukas Bernreiter</author>                                                 
  <license>New BSD</license>                                                    
                                                                               
  <buildtool_depend>catkin</buildtool_depend>                                   
  <buildtool_depend>catkin_simple</buildtool_depend>                            
</package>    
